--- a/app/src/main/res/layout/innerlayout.xml
+++ b/app/src/main/res/layout/innerlayout.xml
@@ -10,13 +10,162 @@
     android:background="@color/white"
     app:cardPreventCornerOverlap="false"
     >
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/profile"
+        android:layout_height="wrap_content"
+        android:id="@+id/data"
+
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_gravity="center_horizontal">
+        <androidx.cardview.widget.CardView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:elevation="12dp"
+            android:id="@+id/view3"
+            app:cardCornerRadius="22.5dp"
+            android:layout_centerHorizontal="true"
+            android:innerRadius="0dp"
+            android:shape="ring"
+            android:padding="50dp"
+            android:thicknessRatio="1.9"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="MissingConstraints">
+
+            <TextView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/purple_200"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_14sp">
+            </TextView>
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="68dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/sl_no"
+            app:layout_constraintStart_toStartOf="@id/data"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/sl_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_68dp"
+            android:textSize="@dimen/_12sp"
+            app:layout_constraintRight_toRightOf="@id/data"
+            app:layout_constraintStart_toStartOf="@id/data"
+            app:layout_constraintTop_toBottomOf="@id/name" />
+
+        <TextView
+
+            android:id="@+id/gender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintStart_toEndOf="@id/name"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="3dp" />
+
+        <TextView
+            android:id="@+id/village"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/view3"
+            tools:ignore="MissingConstraints"
+            android:paddingLeft="16dp" />
+
+        <TextView
+            android:id="@+id/village_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/village"
+            android:paddingLeft="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/acreage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="12dp"
+            android:text="Acreage "
+            android:paddingRight="35dp"
+            app:layout_constraintLeft_toRightOf="@+id/village"
+            app:layout_constraintTop_toBottomOf="@id/view3" />
+
+        <TextView
+            android:id="@+id/acreage_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:paddingRight="70dp"
+            app:layout_constraintLeft_toRightOf="@+id/village"
+            app:layout_constraintTop_toBottomOf="@id/acreage"
+          app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/maincrops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="Maincrops "
+            app:layout_constraintTop_toBottomOf="@id/village_name"
+            android:paddingLeft="16dp"
+            tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/maincrops_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/maincrops"
+           android:paddingLeft="16dp"
+            tools:ignore="MissingConstraints" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/uparrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/uparrow"
+            android:layout_marginLeft="166dp"
+            app:layout_constraintLeft_toRightOf="@+id/name"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/profile"
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="17dp"
         android:layout_gravity="center_horizontal"
         >
         <androidx.cardview.widget.CardView
@@ -35,18 +184,16 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
 
-            <TextView
+            <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:background="@color/purple_200"
                 android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:textSize="15sp">
-            </TextView>
+               android:src="@drawable/man"
+               >
+            </ImageView>
         </androidx.cardview.widget.CardView>
 
 
@@ -57,8 +204,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="68dp"
             android:textColor="@color/black"
-            android:textSize="16sp"
-            android:text="sbcskbzkacakcba"
+            android:textSize="@dimen/_16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/company_currency"
             app:layout_constraintStart_toStartOf="@id/profile"
@@ -70,8 +216,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="68dp"
-            android:text="hjsbhaskbakscb "
-            android:textSize="12sp"
+            android:textSize="@dimen/_12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="@id/profile"
             app:layout_constraintStart_toStartOf="@id/profile"
@@ -86,8 +231,8 @@
             android:src="@drawable/dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/company_name"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="14dp" />
+
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
