--- a/app/src/main/res/layout/innerlayout.xml
+++ b/app/src/main/res/layout/innerlayout.xml
@@ -90,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:text="@string/village"
             app:layout_constraintTop_toBottomOf="@id/view3"
             tools:ignore="MissingConstraints"
             android:paddingLeft="16dp" />
@@ -111,7 +112,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="12dp"
-            android:text="Acreage "
+            android:text="@string/acreage"
             android:paddingRight="35dp"
             app:layout_constraintLeft_toRightOf="@+id/village"
             app:layout_constraintTop_toBottomOf="@id/view3" />
@@ -134,7 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:text="Maincrops "
+            android:text="@string/main_crops"
             app:layout_constraintTop_toBottomOf="@id/village_name"
             android:paddingLeft="16dp"
             tools:ignore="MissingConstraints" />
@@ -156,7 +157,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/uparrow"
-            android:layout_marginLeft="166dp"
+             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/name"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -226,8 +227,7 @@
             android:id="@+id/dropdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+           android:paddingRight="24dp"
             android:src="@drawable/dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/company_name"
