--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/appbar"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-android:fitsSystemWindows="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintBottom_toTopOf="@+id/viewpager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/collapsingToolbar"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="?attr/colorPrimary"
-            >
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
             <ImageView
+                android:id="@+id/imagegreen"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:id="@+id/imagegreen"
-
                 android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
                 android:src="@drawable/background"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"/>
+                app:layout_collapseParallaxMultiplier="0.7"
+                tools:ignore="ContentDescription" />
+
             <View
                 android:id="@+id/overlay_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#6F000000"
-            android:scaleType="centerCrop"
-            />
+                android:background="@color/gray"
+                android:scaleType="centerCrop" />
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_10dp"
                 app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -59,53 +61,55 @@ android:fitsSystemWindows="true"
                         android:id="@+id/backarrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginLeft="4dp"
+                        android:layout_marginStart="@dimen/_4dp"
+                        android:layout_marginLeft="@dimen/_4dp"
                         android:src="@drawable/arrow"
                         app:layout_constraintRight_toLeftOf="@+id/text_memebership"
                         app:layout_constraintStart_toStartOf="parent"
-                        tools:ignore="MissingConstraints"
+                        tools:ignore="ContentDescription,MissingConstraints"
                         tools:layout_editor_absoluteY="4dp" />
 
                     <TextView
                         android:id="@+id/text_memebership"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="24dp"
-                        android:text="Membership"
+                        android:layout_marginStart="@dimen/_24dp"
+                        android:text="@string/membership"
                         android:textColor="@color/white"
-                        android:textSize="16sp"
+                        android:textSize="@dimen/_16sp"
                         android:textStyle="bold"
                         app:layout_constraintLeft_toRightOf="@+id/backarrow"
                         tools:ignore="MissingConstraints"
                         tools:layout_editor_absoluteY="6dp" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="46dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginEnd="@dimen/_46dp"
+                        android:layout_marginRight="@dimen/_16dp"
                         android:src="@drawable/bar_chart"
                         app:layout_constraintEnd_toEndOf="parent"
-                        tools:ignore="MissingConstraints"
+                        tools:ignore="ContentDescription,MissingConstraints"
                         tools:layout_editor_absoluteY="4dp" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginEnd="@dimen/_16dp"
+                        android:layout_marginRight="@dimen/_16dp"
                         android:src="@drawable/download"
                         app:layout_constraintEnd_toEndOf="parent"
-                        tools:ignore="MissingConstraints"
+                        tools:ignore="ContentDescription,MissingConstraints"
                         tools:layout_editor_absoluteY="4dp" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/search_bar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="12dp"
+                        android:layout_margin="@dimen/_12dp"
+                        android:layout_marginTop="@dimen/_24dp"
                         android:background="@color/white"
-                        app:cardCornerRadius="5dp"
-                        android:layout_marginTop="25dp"
+                        app:cardCornerRadius="@dimen/_5dp"
                         app:cardPreventCornerOverlap="false"
                         app:layout_constraintTop_toBottomOf="@+id/backarrow">
 
@@ -114,7 +118,7 @@ android:fitsSystemWindows="true"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             app:iconifiedByDefault="false"
-                            app:queryHint="Search FPO members by name, crop, village etc"
+                            app:queryHint="@string/query_hint"
                             app:searchIcon="@drawable/search_icon">
 
                         </androidx.appcompat.widget.SearchView>
@@ -124,41 +128,45 @@ android:fitsSystemWindows="true"
             </androidx.appcompat.widget.Toolbar>
 
             <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:id="@+id/tabs"
-                app:tabIndicatorHeight="4dp"
                 app:tabGravity="fill"
+                app:tabIndicator="@color/white"
                 app:tabMode="scrollable"
                 app:tabTextAppearance="@style/TabTextAppearance"
-                app:tabIndicator="@color/white"
-                app:tabTextColor="@color/white"
-                />
+                app:tabTextColor="@color/white" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <FrameLayout
+        android:id="@+id/framelayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </FrameLayout>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
-        android:layout_marginRight="19dp"
-        android:layout_marginBottom="50dp"
-        android:src="@drawable/plus"/>
-    <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appbar"/>
-
-
-
+        android:layout_marginEnd="@dimen/_19dp"
+        android:layout_marginBottom="@dimen/_50dp"
+        android:src="@drawable/plus"
+        app:elevation="@dimen/_6dp"
+        app:pressedTranslationZ="@dimen/_12dp"
+        tools:ignore="ContentDescription" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
