--- a/app/src/main/res/layout/fragment_b_o_d.xml
+++ b/app/src/main/res/layout/fragment_b_o_d.xml
@@ -14,7 +14,7 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
-          android:text="BOD"
+          android:text="@string/bod"
           android:textColor="@color/black"
           android:textSize="20sp" />
 
