--- a/app/src/main/res/layout/innerlayout.xml
+++ b/app/src/main/res/layout/innerlayout.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="12dp"
-    app:cardCornerRadius="2dp"
+    android:layout_margin="@dimen/_12dp"
     android:background="@color/white"
-    app:cardPreventCornerOverlap="false"
-    >
+    app:cardCornerRadius="@dimen/_2dp"
+    app:cardPreventCornerOverlap="false">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/data"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_10dp"
+        android:layout_marginBottom="@dimen/_10dp">
 
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_gravity="center_horizontal">
         <androidx.cardview.widget.CardView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:elevation="12dp"
             android:id="@+id/view3"
-            app:cardCornerRadius="22.5dp"
+            android:layout_width="@dimen/_45dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginTop="@dimen/_10dp"
             android:innerRadius="0dp"
+            android:padding="@dimen/_50dp"
             android:shape="ring"
-            android:padding="50dp"
             android:thicknessRatio="1.9"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            app:cardCornerRadius="@dimen/_22.5dp"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
 
@@ -42,10 +40,9 @@
                 android:layout_centerHorizontal="true"
                 android:background="@color/purple_200"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_14sp">
-            </TextView>
+                android:textSize="@dimen/_14sp"
+                android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
 
@@ -54,7 +51,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
+            android:layout_marginStart="@dimen/_68dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sp"
             android:textStyle="bold"
@@ -78,8 +75,8 @@
             android:id="@+id/gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
+            android:layout_marginStart="@dimen/_24dp"
+            android:layout_marginLeft="@dimen/_24dp"
             android:textSize="@dimen/_14sp"
             app:layout_constraintStart_toEndOf="@id/name"
             tools:ignore="MissingConstraints"
@@ -89,31 +86,31 @@
             android:id="@+id/village"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/_12dp"
+            android:paddingStart="@dimen/_16dp"
             android:text="@string/village"
             app:layout_constraintTop_toBottomOf="@id/view3"
-            tools:ignore="MissingConstraints"
-            android:paddingLeft="16dp" />
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/village_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:paddingStart="@dimen/_16dp"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/village"
-            android:paddingLeft="16dp"
             tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/acreage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/_12dp"
+            android:paddingEnd="@dimen/_35dp"
             android:text="@string/acreage"
-            android:paddingRight="35dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/village"
             app:layout_constraintTop_toBottomOf="@id/view3" />
 
@@ -121,67 +118,68 @@
             android:id="@+id/acreage_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:paddingEnd="@dimen/_70dp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:paddingRight="70dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/village"
             app:layout_constraintTop_toBottomOf="@id/acreage"
-          app:layout_constraintEnd_toEndOf="parent"
             tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/maincrops"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/_25dp"
+            android:paddingStart="@dimen/_16dp"
             android:text="@string/main_crops"
             app:layout_constraintTop_toBottomOf="@id/village_name"
-            android:paddingLeft="16dp"
             tools:ignore="MissingConstraints" />
+
         <TextView
             android:id="@+id/maincrops_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:paddingStart="@dimen/_16dp"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/maincrops"
-           android:paddingLeft="16dp"
             tools:ignore="MissingConstraints" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/uparrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:layout_marginRight="@dimen/_20dp"
             android:src="@drawable/uparrow"
-             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/name"
-            />
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/profile"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="17dp"
         android:layout_gravity="center_horizontal"
-        >
+        android:layout_marginTop="@dimen/_26dp"
+        android:layout_marginBottom="@dimen/_17dp">
+
         <androidx.cardview.widget.CardView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:elevation="12dp"
             android:id="@+id/view2"
-            app:cardCornerRadius="22.5dp"
+            android:layout_width="@dimen/_45dp"
+            android:layout_height="@dimen/_45dp"
             android:layout_centerHorizontal="true"
+            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginTop="@dimen/_10dp"
             android:innerRadius="0dp"
+            android:padding="@dimen/_50dp"
             android:shape="ring"
-            android:padding="50dp"
             android:thicknessRatio="1.9"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            app:cardCornerRadius="@dimen/_22.5dp"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints">
 
@@ -191,10 +189,9 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:contentDescription="@string/profile_image"
                 android:gravity="center"
-               android:src="@drawable/man"
-               >
-            </ImageView>
+                android:src="@drawable/man" />
         </androidx.cardview.widget.CardView>
 
 
@@ -203,7 +200,7 @@
             android:id="@+id/company_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
+            android:layout_marginStart="@dimen/_68dp"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sp"
             android:textStyle="bold"
@@ -216,7 +213,7 @@
             android:id="@+id/company_currency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="68dp"
+            android:layout_marginStart="@dimen/_68dp"
             android:textSize="@dimen/_12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="@id/profile"
@@ -227,12 +224,12 @@
             android:id="@+id/dropdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:paddingRight="24dp"
+            android:layout_marginEnd="@dimen/_24dp"
+            android:paddingStart="@dimen/_24dp"
             android:src="@drawable/dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/company_name"
-
-            />
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
