--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#6F000000</color>
+    <color name="light_blue">#E2F9EC</color>
+    <color name="drak_green">#518761</color>
 </resources>
