--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_14sp">14sp</dimen>
     <dimen name="_16sp">16sp</dimen>
+    <dimen name="_20sp">20sp</dimen>
 
     <dimen name="_2dp">2dp</dimen>
     <dimen name="_4dp">4dp</dimen>
@@ -11,6 +12,7 @@
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_10dp">10dp</dimen>
     <dimen name="_12dp">12dp</dimen>
+    <dimen name="_14dp">14dp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_17dp">17dp</dimen>
     <dimen name="_19dp">19dp</dimen>
@@ -19,10 +21,14 @@
     <dimen name="_24dp">24dp</dimen>
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_26dp">26dp</dimen>
+    <dimen name="_30dp">30dp</dimen>
     <dimen name="_35dp">35dp</dimen>
     <dimen name="_45dp">45dp</dimen>
     <dimen name="_46dp">46dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="_52dp">52dp</dimen>
     <dimen name="_68dp">68dp</dimen>
     <dimen name="_70dp">70dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
+    <dimen name="_300dp">300dp</dimen>
 </resources>
