--- a/app/src/main/res/layout/livestock_layout.xml
+++ b/app/src/main/res/layout/livestock_layout.xml
@@ -12,23 +12,24 @@
         android:id="@+id/layout_livestock"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:background="@color/light_blue"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:background="@color/light_blue">
 
         <TextView
             android:id="@+id/livestock_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/_16dp"
             android:layout_marginTop="@dimen/_14dp"
             android:layout_marginBottom="@dimen/_19dp"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/_16dp"
+            android:text="@string/live_stock"
             android:textColor="@color/black"
             android:textSize="@dimen/_16sp"
             android:textStyle="bold"
-            android:text="@string/live_stock"
-            android:gravity="center_vertical"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/livestock_dropdown"
@@ -42,4 +43,289 @@
             tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_livestockdetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/_17dp"
+        android:background="@color/white"
+        android:padding="@dimen/_16dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/livestockcardtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_14dp"
+            android:layout_marginBottom="@dimen/_19dp"
+            android:gravity="center_vertical"
+            android:text="@string/live_stock"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_12dp"
+            android:layout_marginEnd="@dimen/_35dp"
+            android:gravity="center_vertical"
+            android:text="@string/save"
+            android:textColor="@color/drak_green"
+            android:textSize="@dimen/_20sp"
+            app:layout_constraintRight_toLeftOf="@+id/livestock_uparrow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/livestock_uparrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:paddingTop="@dimen/_16dp"
+            android:src="@drawable/uparrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/livestockcardtitle"
+            tools:ignore="MissingConstraints" />
+
+        <TextView
+            android:id="@+id/txt_livestock_member"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_member"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/livestockcardtitle"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/manadatory_member"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:paddingStart="@dimen/_8dp"
+            android:src="@drawable/manadatory"
+            app:layout_constraintLeft_toRightOf="@+id/txt_livestock_member"
+            app:layout_constraintTop_toBottomOf="@id/livestockcardtitle" />
+
+        <RelativeLayout
+            android:id="@+id/livestock_member_relative_layout"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_50dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_member"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp">
+
+            <Spinner
+                android:id="@+id/edt_livestock__member"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="5dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:spinnerMode="dropdown" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:paddingEnd="@dimen/_8dp"
+                android:src="@drawable/dropdown" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/txt_livestock_Type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_livestock_type"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/livestock_member_relative_layout"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/edt_livestock_Type"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_45dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_vertical"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingStart="@dimen/_16dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_Type"
+            tools:ignore="LabelFor,MissingConstraints"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <TextView
+            android:id="@+id/txt_livestock_breed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_livestock_breed"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/edt_livestock_Type"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <RelativeLayout
+            android:id="@+id/livestock_breed_relative_layout"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_50dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_breed"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp">
+
+            <Spinner
+                android:id="@+id/edt_livestock__breed"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="5dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:spinnerMode="dropdown" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:paddingEnd="@dimen/_8dp"
+                android:src="@drawable/dropdown" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/txt_livestock_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_livestock_count"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/livestock_breed_relative_layout"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <RelativeLayout
+            android:id="@+id/livestock_count_relative_layout"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_50dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_count"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp">
+
+            <Spinner
+                android:id="@+id/edt_livestock__count"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="5dp"
+                android:background="@android:color/transparent"
+                android:gravity="center_horizontal"
+                android:spinnerMode="dropdown" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:paddingEnd="@dimen/_8dp"
+                android:src="@drawable/dropdown" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/txt_livestock_average_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_livestock_average_age"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/livestock_count_relative_layout"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/edt_livestock_average_age"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_45dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_vertical"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingStart="@dimen/_16dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_average_age"
+            tools:ignore="LabelFor,MissingConstraints"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <TextView
+            android:id="@+id/txt_livestock_insurance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:gravity="center_vertical"
+            android:text="@string/_livestock_insurance"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sp"
+            app:layout_constraintTop_toBottomOf="@id/edt_livestock_average_age"
+            app:layout_constraintVertical_bias="0.0"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/edt_livestock_insurance"
+            android:layout_width="@dimen/_300dp"
+            android:layout_height="@dimen/_45dp"
+            android:layout_marginTop="@dimen/_8dp"
+            android:background="@drawable/custom_edittext"
+            android:gravity="center_vertical"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingStart="@dimen/_16dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_livestock_insurance"
+            tools:ignore="LabelFor,MissingConstraints"
+            tools:layout_editor_absoluteX="16dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
