--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -30,5 +30,6 @@
     <dimen name="_68dp">68dp</dimen>
     <dimen name="_70dp">70dp</dimen>
     <dimen name="_100dp">100dp</dimen>
+    <dimen name="_150dp">150dp</dimen>
     <dimen name="_300dp">300dp</dimen>
 </resources>
